add user who reported status to reporting status email

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -19,8 +19,9 @@ email.reset.text2=Regards,
 
 email.reported.title = TatamiJHipster status reported
 email.reported.greeting Dear admin
-email.reported.text1 = A user has reported a status as inappropriate or offensive.  To view the status, please click the url below
-emailreported.text2 = Regards,
+email.reported.text1 = {0} has reported a status as inappropriate or offensive.
+email.reported.text2 = To view the status, please click the url below
+emailreported.text3 = Regards,
 
 email.deactivate.title = TatamiJHipster Account Deactivated
 email.deactivate.greeting Dear {0}
