--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -18,10 +18,11 @@ email.reset.text1=Un nouveau mot de passe pour votre compte TatamiJHipster a ét
 email.reset.text2=Cordialement,
 
 # Reported e-mail
-email.reported.title = TatamiJHipster status reported
-email.reported.greeting Dear admin
-email.reported.text1 = A user has reported a status as inappropriate or offensive.  To view the status, please click the url below
-emailreported.text2 = Regards,
+email.reported.title = Statut Signalé sur Tatami
+email.reported.greeting Cher Admin
+email.reported.text1 = {0} a signalé un statut sur Tatami
+email.reported.text2 = Pour voir ce message sur Tatami:
+emailreported.text3 = Cordialement,
 
 #Deactivated User e-mail
 email.deactivate.title = TatamiJHipster Account Deactivated
